
version 5.0.2 2014/??/??
=========================
o regexp name selector is supported.
o to define custom single tag, add lexing-rule interfaces(setSingleTag, setSingleTagRex).
o enabled selector of multiple css classes like 'div.nehan-xxx.nehan-yyy.nehan-zzz'.
o enabled margin cancel.
o support 'auto' as 'table-layout'.
o support word-break property.
* eval unmanaged css props before store

version 5.0.1 2014/05/13
=========================
o now 'oncreate' property is enabled for selector value,
  called when layout is evaluated and dom element is created.
o global style interfaces Nehan.setStyle(or Nehan.setStyles) are added.
! now module UnitSize is included in StyleContext class.

version 5.0.0 2014/04/25
=========================
o more complex float supported, not only static size float, but also dynamic block element can be floated.
! callback argument for functional value and callback is changed,
  SelectorContext is for functional css value, and SelectorCallbackContext is for 'onload' callback.
! for many future are updated, remove the older test folter, so we must create newer one(TODO).

version 4.0.11 2014/xx/xx
=========================
* fix trident rotation bug.
* use 'white-space:pre' instead of tag name.
* fix bug about rotation of alphabet in IE9+.
o add Config.iboxEnable for security reason.
o add Tag::getDatasetAttrsRaw to get attributes with "data-" prefixes.
o support z-index
o support position:absolute
o enabled vert-glyph for safari(ver >= 5)

version 4.0.10, 2013/12/04
=========================
* fix typo in text-empha-style(double circle).
o enabled title attribute for link tag.

version 4.0.9, 2013/12/04
=========================
! rewrite class inheritance(closure library based) for faster constructor.

version 4.0.8, 2013/11/28
=========================
* fix some illegal header-context overwriting.

version 4.0.7, 2013/11/22
=========================
* fix css for Meiryo font trouble(not displayed properly in some charactors).
