@@ -25,10 +25,17 @@
 	 we use it in 'catalog5.js'. -->
     <script type="text/javascript" src="jquery.min.js"></script>
     <script type="text/javascript" src="nehan.js"></script>
+
+    <!-- plugins -->
+    <script type="text/javascript" src="nehan.font-awesome.js"></script>
+    <script type="text/javascript" src="nehan.speak.js"></script>
+
+    <!-- test scripts -->
     <script type="text/javascript" src="test-text.js"></script>
     <script type="text/javascript" src="test-snipet.js"></script>
     <script type="text/javascript" src="test-script.js"></script>
     <script type="text/javascript" src="test-styles.js"></script>
+
     <!--
     <script src="https://google-code-prettify.googlecode.com/svn/trunk/src/prettify.js"></script>
     -->
